Fix links in Docu

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -9,10 +9,10 @@
       "output": {
         ".html": {
           "relative_path": "api/PonzianiComponents.Chessboard.html",
-          "hash": "C+6XQGqMlvMBatqzFEaRh33UX615qqjNof/3zCELTkg="
+          "hash": "jKEriOnWjDrzSHHC78CBC50PG5nYwYfB12q947rct6s="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -24,7 +24,7 @@
           "hash": "8iunYQbi1kNzWleyrbNiO6G4QJcz89cQKQtudCpjtOo="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -36,7 +36,7 @@
           "hash": "nki+LG1a9AA96Yze/P/hpIfzysJlXTMmCcSPBhry/eY="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -48,7 +48,7 @@
           "hash": "hfbUuvebSbGo/3BcrKGskXN+uKRosb2TbwpIBzuanQc="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -60,7 +60,7 @@
           "hash": "ZIGxYgJNwrhKMB796EmqvtOEc1si9ltYkUYCmbq77c8="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -72,7 +72,7 @@
           "hash": "2SM8aE3s5qZ9HHXtJQrq3uAsUGTE5YbDHaJdqR/YRoc="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -84,7 +84,7 @@
           "hash": "EREqvFW40QZm6QkYet8keh9vij+xFMmY9xslEy3aqWk="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -96,7 +96,7 @@
           "hash": "/JRodguWgQ7Nitd/2vfSgZ4mIUtTJB7099YNCTsXFSw="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -108,7 +108,7 @@
           "hash": "XLm9/MZCbYjEImwXZSOTaeSkwKgThIU0dTVOPoI3SCE="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -120,7 +120,7 @@
           "hash": "N49SrwCS9sBnrtePN1ALuLa26o4YbazfJig5lPAZAes="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -132,7 +132,7 @@
           "hash": "Ck4NnIF+WyLc5XBzghjyFK6zVOiiUXyf5qCs0prm33w="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -144,7 +144,7 @@
           "hash": "1Kv+/E/31+Bjj629g9+kSY822CwPJuLwsdJu+eM8QyI="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -156,7 +156,7 @@
           "hash": "PiLNv2gKjuyipjqZNs/KaLiNdjaKp2RMciIYXroeTyU="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -168,7 +168,7 @@
           "hash": "gBM8ZLbT4AE4N9UEYCNvDgZCxaO43AeiXG6pi4WLYZ0="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -180,7 +180,7 @@
           "hash": "w0MN1UnVJZ8j8oaIbONv0FxGJ50Xp4fYbhn2XV0Rw2o="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -192,7 +192,7 @@
           "hash": "J3rjFvwI/DgH72ID2motcVb6VGB3+xKARk17NA9z23s="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -204,7 +204,7 @@
           "hash": "C502ySljl+VuSwV4DI+5BBx7MXk3Wy+AvaEYfLnQxP0="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -216,7 +216,7 @@
           "hash": "JKb+OaiZjXZHXpBccgCU6SbtUglItPg4PfqZam1k66o="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -228,7 +228,7 @@
           "hash": "Es4HN42s+4xVpc7VhOpFPr/3sMvLVprvQNFHHdYln64="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -240,7 +240,7 @@
           "hash": "SbWVCgxEx0kG8tZ6ckSPH2MAMn8McaJywo8eWotq7Xo="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -252,7 +252,7 @@
           "hash": "NAvMwcwB0qZFVehrw6JA1tSstJjIJ5JWV4OPtUk/Sb0="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -264,7 +264,7 @@
           "hash": "YkPflDh2OZHKH7PoQQtqpZmKMH15Dc+ORDvd6I+BALY="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -276,7 +276,7 @@
           "hash": "1rTGfLozgeIpTZ7jOwmCiYQblhzjNtZAwBpgkFKFiF8="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -288,7 +288,7 @@
           "hash": "/R0O9haqLRR1slsBy5I7/WacMMTl0CKnSyiWC0TB7Vw="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -300,7 +300,7 @@
           "hash": "SVc+CBXbAdqXn3pFioQXcsgv22gzEz4p3OSOwZ2T+Fs="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -312,7 +312,7 @@
           "hash": "KiIY018Kve0+ewYLCqVurnY21NjrGVcWj7J3vITOmo0="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -324,7 +324,7 @@
           "hash": "KtwWoxgA8A3AHvb7vE8Xc92S/RrrA0iAn1Zkc7Uro08="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -336,7 +336,7 @@
           "hash": "ThTu5FvMJJaYXLvQLQAm5CWZtbFdhmif6oBeu2xFnJE="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -348,7 +348,7 @@
           "hash": "in5btgv7lVvcX+F+AgfafV7/O0VJUZdvIXbzZ9z3mys="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -360,7 +360,7 @@
           "hash": "GQuYp0wjQ6J8PY9sGc8LAk86FAYmN0IEG0A7jkn+R9Y="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -372,7 +372,7 @@
           "hash": "RVL8QxJJu7y+LvZTl5szQBPtZNiaCSTrOTqBQ7A1ZoI="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -384,7 +384,7 @@
           "hash": "E3W9tdkF+O9cixMWMfE0pGuo+SDKPKIX4n2cmNysTW8="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -396,7 +396,7 @@
           "hash": "KTiOBAcQHeYVhiRwJUDTSwnEYVU/L2/gdoTGw5pl8M4="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -408,7 +408,7 @@
           "hash": "VPiMKVCZIteQWF2HZad6FUFft8fIJxEQCbgiEaSH9Xc="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -420,7 +420,7 @@
           "hash": "2cnsHwfUL0grHx80EKyiqpfHJ1OBn6dkFGjjD9D+qzE="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -432,7 +432,7 @@
           "hash": "s23EgjdHEtiNVqjQQtovRiNiNTKkBuFZcqg0q4EBt5g="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -444,7 +444,7 @@
           "hash": "ox3X1sqX4j/JKVVq5BjLB/QPTtsJttAJ82V5IXJBt7k="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -468,7 +468,7 @@
           "hash": "qtuE5bsGkFC3CQ3w71QkDOqueXC5j0+Ua+Fp8ldac7k="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -504,10 +504,10 @@
       "output": {
         ".html": {
           "relative_path": "articles/tutorial_1_2.html",
-          "hash": "o+5cbC/lT3wGn25dOPCD1A8e3Ogf5T4D+YzlHtNp3Os="
+          "hash": "nn1Wwg09KXWCA700iuibx6QEWvh2emFuNpofu1aJFUw="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -519,10 +519,10 @@
       "output": {
         ".html": {
           "relative_path": "articles/tutorial_1_3.html",
-          "hash": "vfsxjZZ7zxzACTe7+t7l4lNSjwOBUQ1l9S9Kp016YAs="
+          "hash": "xur8twCuUm7x/G8iMU91aw1vmeTAvGgjgllDiJkti7U="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -534,10 +534,10 @@
       "output": {
         ".html": {
           "relative_path": "articles/tutorial_1_4.html",
-          "hash": "nNh4umqH39uyPkrg/RPzun48QqH5CQgf/AMLgsC7Uhc="
+          "hash": "roIkj7I1SHFq2vru1ep5XVqwT98B/e3QLJhSdYTzZx4="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -549,10 +549,10 @@
       "output": {
         ".html": {
           "relative_path": "articles/tutorial_1_5.html",
-          "hash": "VA+jAY6UOCNScAipYoHZQV0/jn/aluIvznn8ylA8tOg="
+          "hash": "JELgjV8OuTuPCBfxYFu4Y1mNF26Z836zie8d6gGEcXY="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -564,10 +564,10 @@
       "output": {
         ".html": {
           "relative_path": "index.html",
-          "hash": "VTLcl40RRwTFXLjNLHDTZ9HciI+nOKYaSRrf9loeeLw="
+          "hash": "aTBgVJYV2bZAORyviQJ7h/n8HgSMdoRaB7Z3lFnDsig="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -586,23 +586,25 @@
   "incremental_info": [
     {
       "status": {
-        "can_incremental": true,
+        "can_incremental": false,
+        "details": "Disable incremental build by force rebuild option.",
         "incrementalPhase": "build",
         "total_file_count": 0,
-        "skipped_file_count": 0
+        "skipped_file_count": 0,
+        "full_build_reason_code": "ForceRebuild"
       },
       "processors": {
         "ConceptualDocumentProcessor": {
-          "can_incremental": true,
+          "can_incremental": false,
           "incrementalPhase": "build",
           "total_file_count": 8,
-          "skipped_file_count": 7
+          "skipped_file_count": 0
         },
         "ManagedReferenceDocumentProcessor": {
-          "can_incremental": true,
+          "can_incremental": false,
           "incrementalPhase": "build",
           "total_file_count": 36,
-          "skipped_file_count": 36
+          "skipped_file_count": 0
         },
         "TocDocumentProcessor": {
           "can_incremental": false,
@@ -615,8 +617,8 @@
     },
     {
       "status": {
-        "can_incremental": true,
-        "details": "Can support incremental post processing.",
+        "can_incremental": false,
+        "details": "Cannot support incremental post processing, the reason is: it's disabled.",
         "incrementalPhase": "postProcessing",
         "total_file_count": 0,
         "skipped_file_count": 0
