--- a/PonzianiComponents/PonzianiComponents.csproj
+++ b/PonzianiComponents/PonzianiComponents.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Version>0.5.0.7</Version>
+    <Version>0.5.1</Version>
     <Copyright>Copyright (c) Christian Günther 2021</Copyright>
     <Authors>Christian Günther</Authors>
     <Company />
@@ -17,9 +17,9 @@
     <Product>Ponziani</Product>
     <PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>0.5.0.7</AssemblyVersion>
-    <FileVersion>0.5.0.7</FileVersion>
-    <PackageReleaseNotes>UCIEngine interface to interact with UCI compliant chess engines added. Small incompatible change: PonzianiComponents.Info is replaced by PonzianiComponents.Chesslib.UCIEngine.Info</PackageReleaseNotes>
+    <AssemblyVersion>0.5.1</AssemblyVersion>
+    <FileVersion>0.5.1</FileVersion>
+    <PackageReleaseNotes>Minor Improvements and Bug fixes</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
