--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -153,10 +153,10 @@
       "output": {
         ".html": {
           "relative_path": "api/PonzianiComponents.Chesslib.PGN.html",
-          "hash": "j09nJ7qMvmnNZfZ7OR05VmaFgoZNmJ4DPJBYp/mSRyg="
+          "hash": "zYhI9TnwUv8Uf784vvR31+cwWGm2yKWsCXaBEseQiOc="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -420,7 +420,7 @@
           "hash": "+RwPDa6D8G5HRy7VAruEdTc58W1KIJJRj+R69ASTkTk="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -767,7 +767,7 @@
           "can_incremental": true,
           "incrementalPhase": "build",
           "total_file_count": 46,
-          "skipped_file_count": 46
+          "skipped_file_count": 45
         },
         "TocDocumentProcessor": {
           "can_incremental": false,
